<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/venueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detailPadding"
        tools:text= "@string/placeName"/>

    <TextView
        android:id="@+id/phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detailPadding"
        tools:text= "@string/phoneNo"/>

    <TextView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detailPadding"
        tools:text= "@string/twitterAddress"/>

    <TextView
        android:id="@+id/venueAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detailPadding"
        tools:text= "@string/venueAddress"/>

    <TextView
        android:id="@+id/venueCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detailPadding"
        tools:text= "@string/venueCategory"/>


</LinearLayout>