<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:hint="@string/venue_name"
        android:id="@+id/actionBarVenueName"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/location"
        android:id="@+id/actionBarLocation"
        android:layout_gravity="center_horizontal" />

    <ImageButton
        android:id="@+id/actionBarSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@mipmap/action_search"
        android:contentDescription="@string/search"/>
</LinearLayout>